<resources>
    <string name="app_name">ShopKura</string>
    <string name="title">ShopKura</string>
    <string name="basket">장바구니 담기</string>
    <string name="buy">바로 구매하기</string>

    <string name="Hydra">수국꽃다발</string>
    <string name="Hydra_price">16,000₩</string>

    <string name="fog">안개꽃다발</string>
    <string name="fog_price">15,000₩</string>

    <string name="rose">장미꽃다발</string>
    <string name="rose_price">21,000₩</string>

    <string name="set">종합꽃다발</string>
    <string name="set_price">24,000₩</string>

    <string name="pink">핑크꽃다발</string>
    <string name="pink_price">21,000₩</string>

    <!--  basket activity  -->
    <string name="bascket_title">- 장바구니 목록</string>
    <string name="select_cnt">개 상품</string>
    <string name="total_price">총 금액</string>
    <string name="won">₩</string>
    <string name="empty_basket">장바구니에 상품이 없습니다.</string>
    <string name="buy_from_basket">구매하기</string>

    <!--  buy activity  -->
    <string name="buy_list">- 구매 목록</string>
    <string name="customer">- 주문자 정보</string>
    <string name="address">주소</string>
    <string name="phone">연락처</string>
    <string name="payment">결제하기</string>

    <!--  After Buy  -->
    <string name="after_buy">구매 완료되었습니다.</string>
    <string name="to_home">홈으로 이동</string>

</resources>