<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/go_basket"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/basket" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#FABAB4"
        android:fontFamily="casual"
        android:gravity="center|center_horizontal"
        android:text="@string/title"
        android:textColor="#373737"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="3dp">

        <Button
            android:id="@+id/get_basket"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:fontFamily="@font/noto_sans"
            android:text="@string/basket"
            android:textSize="18sp" />

        <Space
            android:layout_width="4dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buy"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:fontFamily="@font/noto_sans"
            android:text="@string/buy"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_hydra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_stroke">

                <CheckBox
                    android:id="@+id/checkBox_hydra"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="top|start"
                    android:text="@string/Hydra"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.875"
                    app:layout_constraintStart_toEndOf="@+id/imageView_hydra"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_hydra"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/hydra" />

                <TextView
                    android:id="@+id/textView_hydra"
                    android:layout_width="105dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/Hydra_price"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_hydra" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_fog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <CheckBox
                    android:id="@+id/checkBox_fog"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="top|start"
                    android:text="@string/fog"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.875"
                    app:layout_constraintStart_toEndOf="@+id/imageView_fog"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_fog"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/fog" />

                <TextView
                    android:id="@+id/textView_fog"
                    android:layout_width="105dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/fog_price"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_fog" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_rose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <CheckBox
                    android:id="@+id/checkBox_rose"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="top|start"
                    android:text="@string/rose"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.875"
                    app:layout_constraintStart_toEndOf="@+id/imageView_rose"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_rose"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/rose" />

                <TextView
                    android:id="@+id/textView_rose"
                    android:layout_width="105dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/rose_price"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_rose" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_set"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <CheckBox
                    android:id="@+id/checkBox_set"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="top|start"
                    android:text="@string/set"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.875"
                    app:layout_constraintStart_toEndOf="@+id/imageView_set"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_set"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/set" />

                <TextView
                    android:id="@+id/textView_set"
                    android:layout_width="105dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/set_price"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_set" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_pink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <CheckBox
                    android:id="@+id/checkBox_pink"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:fontFamily="@font/noto_sans"
                    android:gravity="top|start"
                    android:text="@string/pink"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.875"
                    app:layout_constraintStart_toEndOf="@+id/imageView_pink"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView_pink"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pink" />

                <TextView
                    android:id="@+id/textView_pink"
                    android:layout_width="105dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/pink_price"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/checkBox_pink" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>